openshift/acs-alert-viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acs-alert-viewer
  namespace: acs-alert-viewer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: acs-alert-viewer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: acs-alert-viewer
        deployment: acs-alert-viewer
    spec:
      containers:
      - image: quay.io/carobb/acs-alert-viewer:latest
        imagePullPolicy: Always
        name: acs-alert-viewer
        ports:
        - containerPort: 5000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
